[gd_scene load_steps=18 format=2]

[ext_resource path="res://GFX/HUD/MinimapBorder.png" type="Texture" id=1]
[ext_resource path="res://GFX/HUD/HealthBorder.png" type="Texture" id=2]
[ext_resource path="res://Sounds/Main/timeout.wav" type="AudioStream" id=3]
[ext_resource path="res://Scripts/General/HUD.gd" type="Script" id=4]
[ext_resource path="res://GFX/HUD/Coins.png" type="Texture" id=5]
[ext_resource path="res://Sounds/Main/1up.wav" type="AudioStream" id=6]
[ext_resource path="res://GFX/Fonts/MFFont.fnt" type="BitmapFont" id=7]
[ext_resource path="res://Sounds/Bonuses/coin.wav" type="AudioStream" id=8]
[ext_resource path="res://GFX/HUD/Health3.png" type="Texture" id=9]
[ext_resource path="res://Sounds/Main/scoreing.wav" type="AudioStream" id=10]
[ext_resource path="res://GFX/Editor/DebugInvisible.png" type="Texture" id=11]
[ext_resource path="res://GFX/Editor/DebugFly.png" type="Texture" id=12]
[ext_resource path="res://GFX/Fonts/RMKFont.fnt" type="BitmapFont" id=13]
[ext_resource path="res://GFX/HUD/Health1.png" type="Texture" id=14]
[ext_resource path="res://GFX/HUD/Health2.png" type="Texture" id=15]
[ext_resource path="res://GFX/HUD/Score.png" type="Texture" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ null, ExtResource( 14 ), ExtResource( 15 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="HUD" type="CanvasLayer"]
layer = 5
script = ExtResource( 4 )

[node name="CoinsSprite" type="Sprite" parent="."]
light_mask = 0
position = Vector2( 12, 12 )
texture = ExtResource( 5 )

[node name="ScoreSprite" type="Sprite" parent="."]
position = Vector2( 12, 28 )
texture = ExtResource( 16 )

[node name="DebugFlySprite" type="Sprite" parent="."]
visible = false
light_mask = 0
position = Vector2( 380, 204 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 12 )

[node name="DebugInvisibleSprite" type="Sprite" parent="."]
visible = false
light_mask = 0
position = Vector2( 380, 204 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 11 )

[node name="HealthBorder" type="Sprite" parent="."]
position = Vector2( 200, 20 )
z_index = 1
texture = ExtResource( 2 )

[node name="MinimapBorder" type="Sprite" parent="."]
position = Vector2( 372, 25 )
texture = ExtResource( 1 )

[node name="HealthIndicator" type="AnimatedSprite" parent="."]
position = Vector2( 200, 11 )
frames = SubResource( 1 )
frame = 3

[node name="Lives" type="Label" parent="."]
light_mask = 0
margin_left = 150.0
margin_top = -51.0
margin_right = 166.0
margin_bottom = -29.0
rect_pivot_offset = Vector2( 8, 8 )
custom_fonts/font = ExtResource( 7 )
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
light_mask = 0
margin_left = 24.0
margin_top = 24.0
margin_right = 32.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 8, 8 )
custom_fonts/font = ExtResource( 13 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP" type="Label" parent="."]
light_mask = 0
margin_left = -24.0
margin_top = -80.0
margin_right = -8.0
margin_bottom = -58.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 8, 8 )
custom_fonts/font = ExtResource( 7 )
text = "3"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coins" type="Label" parent="."]
margin_left = 24.0
margin_top = 8.0
margin_right = 32.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 8, 8 )
custom_fonts/font = ExtResource( 13 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="."]
margin_left = 545.0
margin_top = 32.0
margin_right = 593.0
margin_bottom = 54.0
grow_horizontal = 0
custom_fonts/font = ExtResource( 7 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugOrphaneNodes" type="Label" parent="."]
modulate = Color( 1, 0, 0, 0.784314 )
light_mask = 0
margin_left = 8.0
margin_top = 216.0
margin_right = 16.0
margin_bottom = 224.0
rect_pivot_offset = Vector2( 8, 8 )
custom_fonts/font = ExtResource( 13 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="TimeoutSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="CoinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
